infra/k8s/gha-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gha-proxy
spec:
  selector:
    app.kubernetes.io/name: gha-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
